# ble-ws-ui

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml  flake.nix
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: graph.ui  preferences_window.ui  schema.xsd  sensor_detail.ui  sensor_overview.ui  sensor_overview_detail.ui  sensor_row.ui  shortcuts.ui  time_date_picker.ui  validated_entry.ui  window.ui
data/schemas/: li.5kw.ble-ws-gtk.gschema.xml
src/: application.rs  config.rs  data.rs  event_loop.rs  main.rs  sensor_name_filter.rs  sensor_obj.rs  util.rs
src/services/: central.rs  mod.rs
src/widgets/: mod.rs  preferences_window.rs  sensor_detail.rs  sensor_overview.rs  sensor_overview_detail.rs  sensor_row.rs  time_date_picker.rs  validated_entry.rs  window.rs
src/widgets/graph/: graph.rs  graph_painter.rs  mod.rs
