[package]
name = "ble-ws-ui"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.1.0-alpha", package = "libadwaita" }
anyhow = "1.0.40"
ble-ws-api = { git = "https://github.com/foldu/ble-ws-api" }
futures-util = "0.3.15"
gio = "0.14.0"
glib = "0.14.0"
gtk = { version = "0.1.0", package = "gtk4" }
gtk-macros = "0.3.0"
indexmap = "1.6.2"
once_cell = "1.8.0"
plotters = "0.3.1"
plotters-cairo = { git = "https://github.com/foldu/plotters-cairo" }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
time = { version = "0.3.0-alpha-2", features = ["local-offset", "formatting", "macros"] }
tokio = { version = "1.6.1", features = ["sync", "rt"] }
tonic = "0.5.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
url = "2.2.2"
uuid = "0.8.2"

[build-dependencies]
gio = "0.14.0"
